<resources>
    <string name="app_name">AndroidTest</string>
    <string name="in2_error">The second input should be an integer</string>

</resources>